# drss

./: .editorconfig  .gitignore  DEPLOY.md  TODO.md  browserless.md  compose.yml  dev.compose.yml  prod.compose.yml
backend/: Dockerfile  celery_app.py  manage.py  openapi.json  prod.Dockerfile  pyproject.toml  run.sh  serverplaygrounddrssfrontendopenapi.json
backend/base/: __init__.py  api.py  authentications.py  celery_helper.py  exceptions.py  paginations.py  settings.py  urls.py  utils.py
backend/feeds/: admin.py  apps.py  browser_crawler.py  browser_crawler_test.py  managers.py  models.py  router.py  schemas.py  signals.py  tasks.py  test_browser_crawlers.py  tests.py  utils.py
backend/feeds/crawlers/: __init__.py  abstract.py  base.py  browserless.py  realbrowser.py
backend/feeds/migrations/: 0001_initial.py  0002_initial.py  0002_rssfeed_custom_headers_rssfeed_refresh_interval.py  0003_extend_title_max_length.py  0003_rssfeed_favicon_url_alter_rssfeed_title.py  0004_add_author_categories_to_rssitem.py  0004_cachedimage.py  0005_add_author_categories_selectors.py  0005_add_category_visible.py  0006_add_model_indexes.py  0006_rssitem_image.py  0007_add_cachedimage_dimensions.py  0007_add_default_to_image.py  0008_add_category_order.py  0008_add_is_public_fields.py  0009_rsseverythingsource.py  0009_rssfeedwithcount_alter_rssfeed_favicon_url.py  0010_add_detail_page_selectors.py  0010_add_related_name_feeds.py  0011_add_custom_headers_to_rsseverythingsource.py  0011_add_description_text_field.py  (+14 more)
backend/users/: models.py  router.py  tests.py
mobile/: App.tsx  (+3 more)
(+295 files in other folders)
