[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<6.0",
    "django-ninja>=1.5.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "django-cors-headers",
    "feedparser>=6.0.12",
    "requests>=2.32.5",
    "celery>=5.6.0",
    "django-celery-results>=2.6.0",
    "django-celery-beat>=2.8.1",
    "redis>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "uvicorn>=0.38.0",
    "returns>=0.26.0",
    "cloudscraper>=1.2.71",
    "Pillow>=9.0.0",
    "boto3>=1.28.0",
    "django-storages>=1.13.2",
    "whitenoise>=6.0",
    "gunicorn>=21.0.0",
    "python-dateutil>=2.8.0",
    "django-redis>=6.0.0",
]
